--- a/Views/application.html
+++ b/Views/application.html
@@ -27,6 +27,8 @@
     <link rel="stylesheet" href="/Styles/bootstrap.min.css">
     <script src="/Script/bootstrap.min.js"></script>
     <link rel="stylesheet" href="/Styles/style.css">
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
+    <script type="text/javascript" src="/Script/application.js"></script>
 </head>
 <body>
 
