--- a/Views/application.html
+++ b/Views/application.html
@@ -34,10 +34,10 @@
 <div id="mainContainer" style="margin-left: 30%; margin-top: 100px; " >
     <div class="logoContainer" style=" width: 500px">
         <img src="logo.png" alt="" class="float-left" style="margin-top: 4px" height="100" width="100">
-        <img src="pp.jpg" alt="" class="float-right" style="margin-right: -20px; margin-top: 15px" height="100" width="100">
+        <img src="pp.jpg" alt="" class="float-right" style="margin-right: -90px; margin-top: 15px" height="100" width="100">
     </div>
 
-    <div style="width: 550px; border: 3px solid forestgreen; ">
+    <div style="width: 600px; border: 3px solid forestgreen; ">
         <form >
 
             <h4 style="text-align: center; margin-top:-100px;	font-size:12px;">MIST</h4>
@@ -45,51 +45,51 @@
             <h5 style="font-size: 15px; margin-top: 100px; margin-left: -30px">1.Student's Basic Information</h5>
 
 
-            <div class="form-group row">
+            <div class="form-group row" >
 
-                <div class="col-sm-10">
+                <div class="col-sm-10" style="margin-left:10%">
                     <input type="text" placeholder="Student's Name" class="form-control" id="stdname">
                 </div>
             </div>
 
             <div class="form-group row">
 
-                <div class="col-sm-10">
+                <div class="col-sm-10" style="margin-left:10%">
                     <input type="number" placeholder="Student's Phone number" class="form-control" id="stdphn">
                 </div>
             </div>
 
             <div class="form-group row">
 
-                <div class="col-sm-10">
+                <div class="col-sm-10" style="margin-left:10%">
                     <input type="text" placeholder="Father's Name" class="form-control" id="fatname">
                 </div>
             </div>
 
             <div class="form-group row">
 
-                <div class="col-sm-10">
+                <div class="col-sm-10" style="margin-left:10%">
                     <input type="email" placeholder="Father's Email" class="form-control"  id="fatmail">
                 </div>
             </div>
 
             <div class="form-group row">
 
-                <div class="col-sm-10">
+                <div class="col-sm-10" style="margin-left:10%">
                     <input type="number" placeholder="Father's Phone number" class="form-control" id="fatphn">
                 </div>
             </div>
 
             <div class="form-group row">
 
-                <div class="col-sm-10">
+                <div class="col-sm-10" style="margin-left:10%">
                     <input type="text" placeholder="Mother's Name" class="form-control" id="motname">
                 </div>
             </div>
 
             <div class="form-group row">
 
-                <div class="col-sm-10">
+                <div class="col-sm-10" style="margin-left:10%">
                     <input type="email" placeholder="Mother's Email" class="form-control"  id="motmail">
                 </div>
             </div>
@@ -97,7 +97,7 @@
 
             <div class="form-group row">
 
-                <div class="col-sm-10">
+                <div class="col-sm-10" style="margin-left:10%">
                     <input type="number" placeholder="Mother's Phone number" class="form-control" id="motphn">
                 </div>
             </div>
@@ -107,49 +107,49 @@
 
             <div class="form-group row">
 
-                <div class="col-sm-10">
+                <div class="col-sm-10" style="margin-left:10%">
                     <input type="text" placeholder="Present Address" class="form-control" id="prsntaddr">
                 </div>
             </div>
 
             <div class="form-group row">
 
-                <div class="col-sm-10">
+                <div class="col-sm-10" style="margin-left:10%">
                     <input type="text" placeholder="Permanent Address" class="form-control" id="pmntaddr">
                 </div>
             </div>
 
             <div class="form-group row">
 
-                <div class="col-sm-10">
+                <div class="col-sm-10" style="margin-left:10%">
                     <input type="text" placeholder="Course Name" class="form-control" id="crse">
                 </div>
             </div>
 
             <div class="form-group row">
 
-                <div class="col-sm-10">
+                <div class="col-sm-10" style="margin-left:10%">
                     <input type="number" placeholder="Student ID" class="form-control" id="stdid">
                 </div>
             </div>
 
             <div class="form-group row">
 
-                <div class="col-sm-10">
+                <div class="col-sm-10" style="margin-left:10%">
                     <input type="number" placeholder="Registration Number" class="form-control" id="regno">
                 </div>
             </div>
 
             <div class="form-group row">
 
-                <div class="col-sm-10">
+                <div class="col-sm-10"style="margin-left:10%">
                     <input type="number" placeholder="Academic Year" class="form-control" id="acyear">
                 </div>
             </div>
 			
 			<div class="form-group row">
 
-                <div class="col-sm-10">
+                <div class="col-sm-10" style="margin-left:10%">
                     <input type="number" placeholder="Level" class="form-control" id="level">
                 </div>
             </div>
@@ -160,13 +160,13 @@
             <fieldset class="form-group row">
                 <div class="col-sm-10">
                     <div class="form-check">
-                        <label class="form-check-label">
+                        <label class="form-check-label" style="margin-left:10%">
                             <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1" >
                             Male
                         </label>
                     </div>
                     <div class="form-check">
-                        <label class="form-check-label">
+                        <label class="form-check-label" style="margin-left:10%">
                             <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2">
                             Female
                         </label>
@@ -175,7 +175,7 @@
                 </div>
             </fieldset>
 			
-		<select>
+		<select class="matha" style="margin-left:10%">
 		<option value="Main Hall">Main Hall</option> <!-- -_- eivabe -->
 		<option value="Extension A">Extension A</option>
 		<option value="Extension B">Extension B</option>
@@ -191,31 +191,31 @@
             <h6 style="font-size: 15px; margin-left: -40px;  margin-top:25px">2.Local Guardian's Information</h6>
             <div class="form-group row">
 
-                <div class="col-sm-10">
+                <div class="col-sm-10" style="margin-left:10%">
                     <input type="text" placeholder="Local Guardian's Name" class="form-control"  id="gdname">
                 </div>
             </div>
             <div class="form-group row">
 
-                <div class="col-sm-10">
+                <div class="col-sm-10" style="margin-left:10%">
                     <input type="email" placeholder="Local Guardian's Email" class="form-control"  id="gdmail">
                 </div>
             </div>
             <div class="form-group row">
 
-                <div class="col-sm-10">
+                <div class="col-sm-10" style="margin-left:10%">
                     <input type="number" placeholder="Local Guardian's Phone number" class="form-control"  id="gdphn">
                 </div>
             </div>
             <div class="form-group row">
 
-                <div class="col-sm-10">
+                <div class="col-sm-10" style="margin-left:10%">
                     <input type="text" placeholder="Local Guardian's Address" class="form-control"  id="gdaddr">
                 </div>
             </div>
             <div class="form-group row">
 
-                <div class="col-sm-10">
+                <div class="col-sm-10" style="margin-left:10%">
                     <input type="submit" name="Submit" class="btn btn-success" style="width: 220px;">
                 </div>
             </div>
