--- a/Views/application.html
+++ b/Views/application.html
@@ -40,7 +40,7 @@
     </div>
 
     <div style="width: 600px; border: 3px solid forestgreen; ">
-        <form >
+        <form action="#">
 
             <h4 style="text-align: center; margin-top:-100px;	font-size:12px;">MIST</h4>
             <h3 style="font-size: 20px; margin-top: 25px ; text-align:center;">Application Form for "Osmani Hall"</h3>
@@ -218,7 +218,7 @@
             <div class="form-group row">
 
                 <div class="col-sm-10" style="margin-left:10%">
-                    <input type="submit" name="Submit" class="btn btn-success" style="width: 220px;">
+                    <input type="submit" name="Submit" class="btn btn-success" style="width: 220px;" id="sbmt">
                 </div>
             </div>
 
