--- a/Views/first page.html
+++ b/Views/first page.html
@@ -13,7 +13,7 @@
 <body>
 
 	<div class="topnav">
-	<img src="logo.png" alt="" class="float-left" style="margin-top: 1% ;margin-bottom:1%; margin-left:5%" height="55" width="60">
+	<img src="logo.png" class= "pic" alt="" class="float-left" style="margin-top: 1% ;margin-bottom:1%; margin-left:5%" height="55" width="60">
 
   <a class="active" href="#entry">Entry List</a>
   <a href="#login">Log In</a>
