--- a/Views/login.html
+++ b/Views/login.html
@@ -9,7 +9,7 @@
 
 
 <div class="container" style="width:400px">
-  <form>
+  <form action="#">
   <div class="imgcontainer">
     <img src="logo.png" alt="Avatar" class="avatar">
   </div>
