--- a/Views/table.html
+++ b/Views/table.html
@@ -26,13 +26,12 @@
 <div class="topnav">
 <h1>Osmani Hall Student Database</h1>
 
-  <a class="active" href="#home">
 
-  <input type="button" class="btn btn-info" value="Edit Info">
-    <input type="button" class="btn btn-info" value="Delete Student">
+  <input type="button" class="btn btn-info" value="Edit Info" id="edt" >
+    <input type="button" class="btn btn-info" value="Delete Student" id="dlt">
 
-    <input type="button" class="btn btn-info" value="Add Student">
-	</a>
+    <input type="button" class="btn btn-info" value="Add Student" id="add">
+	
 
    
 </div>
