--- a/Views/Styles/first page.css
+++ b/Views/Styles/first page.css
@@ -40,9 +40,9 @@ body{
 
 
 
-/* When the screen is less than 600px wide, stack the links and the search field vertically instead of horizontally */
+/* When the screen is less than 600px wide, stack the links  vertically instead of horizontally */
 @media screen and (max-width: 600px) {
-    .topnav a {
+    .topnav a, .topnav pic {
         float: none;
         display: block;
         text-align: left;
