--- a/Views/Styles/table.css
+++ b/Views/Styles/table.css
@@ -35,14 +35,7 @@
     overflow: hidden;
 }
 
-.topnav a {
-    float: middle;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-}
+
 
 .topnav input[type=button] {
     float: right;
@@ -51,4 +44,17 @@
     margin-top: 8px;
     margin-right: 16px;
     font-size: 17px;
+}
+
+@media screen and (max-width: 600px) {
+    .topnav input[type=button] {
+        float: none;
+        display: block;
+        text-align: left;
+        width: 50%;
+        margin: 0;
+        padding: 14px;
+		margin-top:1%;
+    }
+    
 }
