--- a/Views/application.html
+++ b/Views/application.html
@@ -184,7 +184,7 @@
             </fieldset>
 			
 		<select class="matha" style="margin-left:10%" >
-		<option value="Main Hall">Main Hall</option> <!-- -_- eivabe -->
+		<option value="Osmani Hall">Osmani Hall</option> <!-- -_- eivabe -->
 		<option value="Extension A">Extension A</option>
 		<option value="Extension B">Extension B</option>
 		<option value="Extension C">Extension C</option>
