--- a/Views/table.html
+++ b/Views/table.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <title>Table</title>
 <link href="/Styles/table.css" rel="stylesheet"/>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
 
 <style>
 	body{
