--- a/Views/Styles/guestTable.css
+++ b/Views/Styles/guestTable.css
@@ -1,6 +1,13 @@
+body{
+		font-family: Arial;
+		font-size: 20px;
+		background-image: url(back2.jpg);
+		background-size: cover;
+		background-attachment:fixed;
 
-
-.tableDesign,th,td{
+	}
+	
+	.tableDesign,th,td{
 		border : 2px solid steelblue;
 		background: #e6f9ff;
 		//margin-left:300px;
@@ -33,15 +40,10 @@
 	font-size:30px;
 	text-align:center;
 	}
-.topnav {
+	
+	.topnav {
     background-color: #00004d;
     overflow: hidden;
-}
-.topnav h1 {
-    margin-top:20px;
-	font-size:30px;
-	text-align:center;
-	color:white;
 }
 
 .topnav a {
@@ -53,6 +55,14 @@
     font-size: 17px;
 }
 
+.topnav h1 {
+    margin-top:20px;
+	font-size:30px;
+	text-align:center;
+	color:white;
+}
+
+/* Change the color of links on hover */
 .topnav a:hover {
     background-color: #ddd;
     color: black;
@@ -86,4 +96,3 @@
         border: 1px solid #ccc;
     }
 }
-
