--- a/Views/Styles/table.css
+++ b/Views/Styles/table.css
@@ -41,9 +41,10 @@
     float: right;
     padding: 6px;
     border: none;
-    margin-top: 8px;
+    margin-top: 50px;;
     margin-right: 16px;
     font-size: 17px;
+	margin-bottom:1%;
 }
 
 @media screen and (max-width: 600px) {
