--- a/Views/application.html
+++ b/Views/application.html
@@ -32,6 +32,12 @@
 </head>
 <body>
 
+<div class="topnav">
+
+   <a class="active" href="/firstpage" id="home">Home</a>
+   
+</div>
+
 
 <div id="mainContainer" style="margin-left: 30%; margin-top: 100px; " >
     <div class="logoContainer" style=" width: 500px">
@@ -50,21 +56,21 @@
             <div class="form-group row" >
 
                 <div class="col-sm-10" style="margin-left:10%">
-                    <input type="text" placeholder="Student's Name" class="form-control" id="stdname">
+                    <input type="text" placeholder="Student's Name" class="form-control" id="stdname" required>
                 </div>
             </div>
 
             <div class="form-group row">
 
                 <div class="col-sm-10" style="margin-left:10%">
-                    <input type="number" placeholder="Student's Phone number" class="form-control" id="stdphn">
+                    <input type="number" placeholder="Student's Phone number" class="form-control" id="stdphn" required>
                 </div>
             </div>
 
             <div class="form-group row">
 
                 <div class="col-sm-10" style="margin-left:10%">
-                    <input type="text" placeholder="Father's Name" class="form-control" id="fatname">
+                    <input type="text" placeholder="Father's Name" class="form-control" id="fatname" required>
                 </div>
             </div>
 
@@ -78,14 +84,14 @@
             <div class="form-group row">
 
                 <div class="col-sm-10" style="margin-left:10%">
-                    <input type="number" placeholder="Father's Phone number" class="form-control" id="fatphn">
+                    <input type="number" placeholder="Father's Phone number" class="form-control" id="fatphn" required>
                 </div>
             </div>
 
             <div class="form-group row">
 
                 <div class="col-sm-10" style="margin-left:10%">
-                    <input type="text" placeholder="Mother's Name" class="form-control" id="motname">
+                    <input type="text" placeholder="Mother's Name" class="form-control" id="motname" required>
                 </div>
             </div>
 
@@ -100,7 +106,7 @@
             <div class="form-group row">
 
                 <div class="col-sm-10" style="margin-left:10%">
-                    <input type="number" placeholder="Mother's Phone number" class="form-control" id="motphn">
+                    <input type="number" placeholder="Mother's Phone number" class="form-control" id="motphn" required>
                 </div>
             </div>
 
@@ -110,49 +116,49 @@
             <div class="form-group row">
 
                 <div class="col-sm-10" style="margin-left:10%">
-                    <input type="text" placeholder="Present Address" class="form-control" id="prsntaddr">
+                    <input type="text" placeholder="Present Address" class="form-control" id="prsntaddr" required>
                 </div>
             </div>
 
             <div class="form-group row">
 
                 <div class="col-sm-10" style="margin-left:10%">
-                    <input type="text" placeholder="Permanent Address" class="form-control" id="pmntaddr">
+                    <input type="text" placeholder="Permanent Address" class="form-control" id="pmntaddr" required>
                 </div>
             </div>
 
             <div class="form-group row">
 
                 <div class="col-sm-10" style="margin-left:10%">
-                    <input type="text" placeholder="Course Name" class="form-control" id="crse">
+                    <input type="text" placeholder="Course Name" class="form-control" id="crse" required>
                 </div>
             </div>
 
             <div class="form-group row">
 
                 <div class="col-sm-10" style="margin-left:10%">
-                    <input type="number" placeholder="Student ID" class="form-control" id="stdid">
+                    <input type="number" placeholder="Student ID" class="form-control" id="stdid" required>
                 </div>
             </div>
 
             <div class="form-group row">
 
                 <div class="col-sm-10" style="margin-left:10%">
-                    <input type="number" placeholder="Registration Number" class="form-control" id="regno">
+                    <input type="number" placeholder="Registration Number" class="form-control" id="regno" required>
                 </div>
             </div>
 
             <div class="form-group row">
 
                 <div class="col-sm-10"style="margin-left:10%">
-                    <input type="number" placeholder="Academic Year" class="form-control" id="acyear">
+                    <input type="number" placeholder="Academic Year" class="form-control" id="acyear" required>
                 </div>
             </div>
 			
 			<div class="form-group row">
 
                 <div class="col-sm-10" style="margin-left:10%">
-                    <input type="number" placeholder="Level" class="form-control" id="level">
+                    <input type="number" placeholder="Level" class="form-control" id="level" required>
                 </div>
             </div>
 
@@ -163,13 +169,13 @@
                 <div class="col-sm-10">
                     <div class="form-check">
                         <label class="form-check-label" style="margin-left:10%">
-                            <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1" >
+                            <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1"  >
                             Male
                         </label>
                     </div>
                     <div class="form-check">
                         <label class="form-check-label" style="margin-left:10%">
-                            <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2">
+                            <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2" >
                             Female
                         </label>
                     </div>
@@ -177,7 +183,7 @@
                 </div>
             </fieldset>
 			
-		<select class="matha" style="margin-left:10%">
+		<select class="matha" style="margin-left:10%" >
 		<option value="Main Hall">Main Hall</option> <!-- -_- eivabe -->
 		<option value="Extension A">Extension A</option>
 		<option value="Extension B">Extension B</option>
@@ -194,25 +200,25 @@
             <div class="form-group row">
 
                 <div class="col-sm-10" style="margin-left:10%">
-                    <input type="text" placeholder="Local Guardian's Name" class="form-control"  id="gdname">
+                    <input type="text" placeholder="Local Guardian's Name" class="form-control"  id="gdname" required>
                 </div>
             </div>
             <div class="form-group row">
 
                 <div class="col-sm-10" style="margin-left:10%">
-                    <input type="email" placeholder="Local Guardian's Email" class="form-control"  id="gdmail">
+                    <input type="email" placeholder="Local Guardian's Email" class="form-control"  id="gdmail" required>
                 </div>
             </div>
             <div class="form-group row">
 
                 <div class="col-sm-10" style="margin-left:10%">
-                    <input type="number" placeholder="Local Guardian's Phone number" class="form-control"  id="gdphn">
+                    <input type="number" placeholder="Local Guardian's Phone number" class="form-control"  id="gdphn" required>
                 </div>
             </div>
             <div class="form-group row">
 
                 <div class="col-sm-10" style="margin-left:10%">
-                    <input type="text" placeholder="Local Guardian's Address" class="form-control"  id="gdaddr">
+                    <input type="text" placeholder="Local Guardian's Address" class="form-control"  id="gdaddr" required>
                 </div>
             </div>
             <div class="form-group row">
