--- a/Views/first page.html
+++ b/Views/first page.html
@@ -7,17 +7,18 @@
 <link rel="stylesheet" href="/Styles/bootstrap.min.css">
     <script src="/Script/bootstrap.min.js"></script>
 	<link href="/Styles/first page.css" rel="stylesheet"/>
-	
+	<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
 
 </head>
 <body>
 
 	<div class="topnav">
-	<img src="logo.png" class= "pic" alt="" class="float-left" style="margin-top: 1% ;margin-bottom:1%; margin-left:5%" height="55" width="60">
+	<img src="logo.png" class= "pic" alt="" class="float-left" style="margin-top: 1% ; margin-left:5%" height="60" width="63">
+		<h1 class="hdr" class="float-left" style="margin-left:20%  ;margin-top: -4%; margin-bottom:-3% ;color:white">Osmani Hall Entry Management System</h1>
 
-  <a class="active" href="#entry">Entry List</a>
-  <a href="#login">Log In</a>
-  <a href="#contact">Contact</a>
+ <a class="active" href="/mergeTable" id="entry">Entry List</a>
+  <a href="/login" id="login">Log In</a>
+  <a href="/contact" id="cntct">Contact</a>
   
   </a>
 </div>
