--- a/Views/login.html
+++ b/Views/login.html
@@ -4,8 +4,15 @@
     <link rel="stylesheet" href="/Styles/bootstrap.min.css">
     <script src="Styels/bootstrap.min.js"></script>
     <link rel="stylesheet" href="Styles/login.css">
+	<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
 </head>
 <body>
+
+<div class="topnav">
+
+   <a class="active" href="/firstpage" id="home">Home</a>
+   
+</div>
 
 
 <div class="container" style="width:400px">
