--- a/Views/mergeTable.html
+++ b/Views/mergeTable.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Table</title>
+<title>Merge Table</title>
 <link href="/Styles/mergeTable.css" rel="stylesheet"/>
 
 <style>
@@ -19,17 +19,22 @@
 
  <link rel="stylesheet" href="/Styles/bootstrap.min.css">
     <script src="/Script/bootstrap.min.js"></script>
+	<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
 
 </head>
 <body>
 
 <div class="topnav">
 
-  <h1>Osmani Hall In-Out Register</h1>
+  <h1>Resident Student In-Out Register</h1>
+   <a class="active" href="/firstpage" id="home">Home</a>
+  <a href="/guesttable" id="gst">Guest Student In-Out Register</a>
+  
+    <input type="text" placeholder="Search.." id="srch">
    
 </div>
 
-<div id="tableContainer" style="margin-left: 100px; margin-top: 75px; " >
+<div id="tableContainer" style="margin-left: 2%; margin-top: 75px; " >
  
 
 		<table class = "tableDesign">
