--- a/Views/table 2.html
+++ b/Views/table 2.html
@@ -19,6 +19,7 @@
 
  <link rel="stylesheet" href="/Styles/bootstrap.min.css">
     <script src="/Script/bootstrap.min.js"></script>
+	<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
 
 </head>
 <body>
