--- a/Views/login.html
+++ b/Views/login.html
@@ -10,7 +10,7 @@
 
 <div class="topnav">
 
-   <a class="active" href="/firstpage" id="home">Home</a>
+   <a class="active" href="/" id="home">Home</a>
    
 </div>
 
