--- a/Views/mergeTable.html
+++ b/Views/mergeTable.html
@@ -27,7 +27,7 @@
 <div class="topnav">
 
   <h1>Resident Student In-Out Register</h1>
-   <a class="active" href="/firstpage" id="home">Home</a>
+   <a class="active" href="/" id="home">Home</a>
   <a href="/guesttable" id="gst">Guest Student In-Out Register</a>
   
     <input type="text" placeholder="Search.." id="srch">
