--- a/Views/guestTable.html
+++ b/Views/guestTable.html
@@ -16,7 +16,7 @@
 	<div class="topnav">
 	<h1>Guest Student In-Out Register</h1>
   <a class="active" href="/" id="home">Home</a>
-  <a href="/residentstudenttable" id="res">Resident Student In-Out Register</a>
+  <a href="/residentstudent" id="res">Resident Student In-Out Register</a>
   
     <input type="text" placeholder="Search.." id="srch">
 
