--- a/Views/mergeTable.html
+++ b/Views/mergeTable.html
@@ -28,7 +28,7 @@
 
   <h1>Resident Student In-Out Register</h1>
    <a class="active" href="/" id="home">Home</a>
-  <a href="/guesttable" id="gst">Guest Student In-Out Register</a>
+  <a href="/guest" id="gst">Guest Student In-Out Register</a>
   
     <input type="text" placeholder="Search.." id="srch">
    
