--- a/Views/application.html
+++ b/Views/application.html
@@ -25,12 +25,10 @@
     <title>Application Form for "Osmani Hall"</title>
     <!--<link rel="stylesheet" type="text/css" href="style.css">-->
     <link rel="stylesheet" href="/Styles/bootstrap.min.css">
-    <link rel="stylesheet" href="/Styles/toast.css">
     <script src="/Script/bootstrap.min.js"></script>
     <link rel="stylesheet" href="/Styles/style.css">
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
     <script type="text/javascript" src="/Script/application.js"></script>
-    <script type="text/javascript" src="/Script/toast.js"></script>
 </head>
 <body>
 
@@ -48,7 +46,7 @@
     </div>
 
     <div style="width: 600px; border: 3px solid forestgreen; ">
-        <form action="/students" method="post">
+        <form action="#">
 
             <h4 style="text-align: center; margin-top:-100px;	font-size:12px;">MIST</h4>
             <h3 style="font-size: 20px; margin-top: 25px ; text-align:center;">Application Form for "Osmani Hall"</h3>
@@ -57,58 +55,58 @@
 
             <div class="form-group row" >
 
-                <div class="col-sm-10" style="margin-left:10%">
-                    <input type="text" placeholder="Student's Name" class="form-control" name="stdname" required>
+                <div class="col-sm-10" style="margin-left:5%">
+                    <input type="text" placeholder="Student's Name" class="form-control" id="stdname" required>
                 </div>
             </div>
 
             <div class="form-group row">
 
-                <div class="col-sm-10" style="margin-left:10%">
-                    <input type="number" placeholder="Student's Phone number" class="form-control" name="stdphn" required>
+                <div class="col-sm-10" style="margin-left:5%">
+                    <input type="number" placeholder="Student's Phone number" class="form-control" id="stdphn" required>
                 </div>
             </div>
 
             <div class="form-group row">
 
-                <div class="col-sm-10" style="margin-left:10%">
-                    <input type="text" placeholder="Father's Name" class="form-control" name="fatname" required>
+                <div class="col-sm-10" style="margin-left:5%">
+                    <input type="text" placeholder="Father's Name" class="form-control" id="fatname" required>
                 </div>
             </div>
 
             <div class="form-group row">
 
-                <div class="col-sm-10" style="margin-left:10%">
-                    <input type="email" placeholder="Father's Email" class="form-control"  name="fatmail">
+                <div class="col-sm-10" style="margin-left:5%">
+                    <input type="email" placeholder="Father's Email" class="form-control"  id="fatmail">
                 </div>
             </div>
 
             <div class="form-group row">
 
-                <div class="col-sm-10" style="margin-left:10%">
-                    <input type="number" placeholder="Father's Phone number" class="form-control" name="fatphn" required>
+                <div class="col-sm-10" style="margin-left:5%">
+                    <input type="number" placeholder="Father's Phone number" class="form-control" id="fatphn" required>
                 </div>
             </div>
 
             <div class="form-group row">
 
-                <div class="col-sm-10" style="margin-left:10%">
-                    <input type="text" placeholder="Mother's Name" class="form-control" name="motname" required>
+                <div class="col-sm-10" style="margin-left:5%">
+                    <input type="text" placeholder="Mother's Name" class="form-control" id="motname" required>
                 </div>
             </div>
 
             <div class="form-group row">
 
-                <div class="col-sm-10" style="margin-left:10%">
-                    <input type="email" placeholder="Mother's Email" class="form-control"  name="motmail">
+                <div class="col-sm-10" style="margin-left:5%">
+                    <input type="email" placeholder="Mother's Email" class="form-control"  id="motmail">
                 </div>
             </div>
 
 
             <div class="form-group row">
 
-                <div class="col-sm-10" style="margin-left:10%">
-                    <input type="number" placeholder="Mother's Phone number" class="form-control" name="motphn" required>
+                <div class="col-sm-10" style="margin-left:5%">
+                    <input type="number" placeholder="Mother's Phone number" class="form-control" id="motphn" required>
                 </div>
             </div>
 
@@ -117,50 +115,50 @@
 
             <div class="form-group row">
 
-                <div class="col-sm-10" style="margin-left:10%">
-                    <input type="text" placeholder="Present Address" class="form-control" name="prsntaddr" required>
+                <div class="addr" style=" margin-left:10%; margin-right:-10%; width:115%">
+                    <input type="text" placeholder="Present Address" class="form-control" id="prsntaddr" required>
                 </div>
             </div>
 
             <div class="form-group row">
 
-                <div class="col-sm-10" style="margin-left:10%">
-                    <input type="text" placeholder="Permanent Address" class="form-control" name="pmntaddr" required>
+                <div class="addr" style=" margin-left:10%;margin-right:-10%; width:100%">
+                    <input type="text" placeholder="Permanent Address" class="form-control" id="pmntaddr" required>
                 </div>
             </div>
 
             <div class="form-group row">
 
-                <div class="col-sm-10" style="margin-left:10%">
-                    <input type="text" placeholder="Course Name" class="form-control" name="crse" required>
+                <div class="col-sm-10" style="margin-left:5%">
+                    <input type="text" placeholder="Course Name" class="form-control" id="crse" required>
                 </div>
             </div>
 
             <div class="form-group row">
 
-                <div class="col-sm-10" style="margin-left:10%">
-                    <input type="number" placeholder="Student ID" class="form-control" name="stdid" required>
+                <div class="col-sm-10" style="margin-left:5%">
+                    <input type="number" placeholder="Student ID" class="form-control" id="stdid" required>
                 </div>
             </div>
 
             <div class="form-group row">
 
-                <div class="col-sm-10" style="margin-left:10%">
-                    <input type="number" placeholder="Registration Number" class="form-control" name="regno" required>
+                <div class="col-sm-10" style="margin-left:5%">
+                    <input type="number" placeholder="Registration Number" class="form-control" id="regno" required>
                 </div>
             </div>
 
             <div class="form-group row">
 
-                <div class="col-sm-10"style="margin-left:10%">
-                    <input type="number" placeholder="Academic Year" class="form-control" name="acyear" required>
+                <div class="col-sm-10"style="margin-left:5%">
+                    <input type="number" placeholder="Academic Year" class="form-control" id="acyear" required>
                 </div>
             </div>
 			
 			<div class="form-group row">
 
-                <div class="col-sm-10" style="margin-left:10%">
-                    <input type="number" placeholder="Level" class="form-control" name="level" required>
+                <div class="col-sm-10" style="margin-left:5%">
+                    <input type="number" placeholder="Level" class="form-control" id="level" required>
                 </div>
             </div>
 
@@ -170,14 +168,14 @@
             <fieldset class="form-group row">
                 <div class="col-sm-10">
                     <div class="form-check">
-                        <label class="form-check-label" style="margin-left:10%">
-                            <input class="form-check-input" type="radio" name="gender" " value="Male"  >
+                        <label class="form-check-label" style="margin-left:5%">
+                            <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1"  >
                             Male
                         </label>
                     </div>
                     <div class="form-check">
-                        <label class="form-check-label" style="margin-left:10%">
-                            <input class="form-check-input" type="radio" name="gender"  value="Female" >
+                        <label class="form-check-label" style="margin-left:5%">
+                            <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2" >
                             Female
                         </label>
                     </div>
@@ -185,7 +183,7 @@
                 </div>
             </fieldset>
 			
-		<select class="matha" style="margin-left:10%" name="hall">
+		<select class="matha" style="margin-left:5%" >
 		<option value="Osmani Hall">Osmani Hall</option> <!-- -_- eivabe -->
 		<option value="Extension A">Extension A</option>
 		<option value="Extension B">Extension B</option>
@@ -196,37 +194,43 @@
 
 
 		</select>
+		<div class="form-group row">
+
+                <div class="col-sm-10" style="margin-left:5%">
+                    <input type="number" placeholder="Room number" class="form-control" id="room" required>
+                </div>
+            </div>
 
 
             <h6 style="font-size: 15px; margin-left: -40px;  margin-top:25px">2.Local Guardian's Information</h6>
             <div class="form-group row">
 
-                <div class="col-sm-10" style="margin-left:10%">
-                    <input type="text" placeholder="Local Guardian's Name" class="form-control"  name="gdname" required>
+                <div class="col-sm-10" style="margin-left:5%">
+                    <input type="text" placeholder="Local Guardian's Name" class="form-control"  id="gdname" required>
+                </div>
+            </div>
+            <div class="form-group row">
+
+                <div class="col-sm-10" style="margin-left:5%">
+                    <input type="email" placeholder="Local Guardian's Email" class="form-control"  id="gdmail" required>
+                </div>
+            </div>
+            <div class="form-group row">
+
+                <div class="col-sm-10" style="margin-left:5%">
+                    <input type="number" placeholder="Local Guardian's Phone number" class="form-control"  id="gdphn" required>
+                </div>
+            </div>
+            <div class="form-group row">
+
+                <div class="col-sm-10" style="margin-left:5%">
+                    <input type="text" placeholder="Local Guardian's Address" class="form-control"  id="gdaddr" required>
                 </div>
             </div>
             <div class="form-group row">
 
                 <div class="col-sm-10" style="margin-left:10%">
-                    <input type="email" placeholder="Local Guardian's Email" class="form-control"  name="gdmail" >
-                </div>
-            </div>
-            <div class="form-group row">
-
-                <div class="col-sm-10" style="margin-left:10%">
-                    <input type="number" placeholder="Local Guardian's Phone number" class="form-control"  name="gdphn" required>
-                </div>
-            </div>
-            <div class="form-group row">
-
-                <div class="col-sm-10" style="margin-left:10%">
-                    <input type="text" placeholder="Local Guardian's Address" class="form-control"  name="gdaddr" required>
-                </div>
-            </div>
-            <div class="form-group row">
-
-                <div class="col-sm-10" style="margin-left:10%">
-                    <input type="submit"  class="btn btn-success" style="width: 220px;" >
+                    <input type="submit" name="Submit" class="btn btn-success" style="width: 220px;" id="sbmt">
                 </div>
             </div>
 
