--- a/Views/table.html
+++ b/Views/table.html
@@ -27,17 +27,13 @@
 <div class="topnav">
 <h1>Osmani Hall Student Database</h1>
 
-
-  <input type="button" class="btn btn-info" value="Edit Info" id="edt" >
-    <input type="button" class="btn btn-info" value="Delete Student" id="dlt">
-
     <input type="button" class="btn btn-info" value="Add Student" id="add">
 	
 
    
 </div>
 
-<div id="tableContainer" style="margin-left: 100px; margin-top: 75px; " >
+<div id="tableContainer" style="margin-left: 7%; margin-top: 75px; " >
  
 
 		<table class = "tableDesign">
@@ -50,11 +46,11 @@
 					<th>Room No</th>
 					<th>Gender</th>
 					<th>Contact No</th>
-					
+						<th>Other</th>
 				</tr>
 			</thead>
 			<tbody id="mydata">
-				<!-- <tr>
+				 <tr>
 					<td>mila</td>
 					<td>cse</td>
 					<td>4</td>
@@ -62,9 +58,10 @@
 					<td>601</td>
 					<td>female</td>
 					<td>01712345678</td>
+					<td><button type="button" class="btn btn-primary" style="width:100% ; background:#00004d ; color:white;">Edit</button></td>
 
 				</tr>
-				
+				<!--
 				<tr>
 					<td>keya</td>
 					<td>eee</td>
