--- a/Views/Styles/table.css
+++ b/Views/Styles/table.css
@@ -11,7 +11,7 @@
 	}
 	.tableDesign{
 		width:100%;
-		margin:-1%;
+		border : 2px solid steelblue;
 		
 	}
 	th,td{
@@ -35,27 +35,21 @@
     overflow: hidden;
 }
 
-
+.topnav a {
+    float: middle;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
 
 .topnav input[type=button] {
     float: right;
     padding: 6px;
     border: none;
-    margin-top: 50px;;
+    margin-top: 8px;
     margin-right: 16px;
     font-size: 17px;
-	margin-bottom:1%;
-}
-
-@media screen and (max-width: 600px) {
-    .topnav input[type=button] {
-        float: none;
-        display: block;
-        text-align: left;
-        width: 50%;
-        margin: 0;
-        padding: 14px;
-		margin-top:1%;
-    }
-    
+	margin-bottom:1%
 }
