--- a/Views/table.html
+++ b/Views/table.html
@@ -58,7 +58,7 @@
 					<td>601</td>
 					<td>female</td>
 					<td>01712345678</td>
-					<td><button type="button" class="btn btn-primary" style="width:100% ; background:#00004d ; color:white;">Edit</button></td>
+					<td><button type="button" class="btn btn-primary" style="width:100% ; background:#00004d ; color:white;" id="edt">Edit</button></td>
 
 				</tr>
 				<!--
