--- a/Views/table.html
+++ b/Views/table.html
@@ -33,13 +33,14 @@
    
 </div>
 
-<div id="tableContainer" style="margin-left: 7%; margin-top: 75px; " >
+<div id="tableContainer" style="margin-left: 7%; margin-right: 3%; margin-top: 75px; " >
  
 
 		<table class = "tableDesign">
 			<thead>
 				<tr>
-					<th>Name</th>
+				
+					<th id="nameleft">Name</th>
 					<th>Course</th>
 					<th>Level</th>
 					<th>Student ID</th>
