--- a/Views/Styles/table.css
+++ b/Views/Styles/table.css
@@ -22,8 +22,12 @@
 		background:#00004d;
 		color:white;
 		font-size:20px;
-
 	}
+
+	th #nameleft{
+		text-align:left !important;
+	}
+
 	.topnav h1{
 		margin-top:20px;
 	font-size:30px;
@@ -35,20 +39,12 @@
     overflow: hidden;
 }
 
-.topnav a {
-    float: middle;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-}
 
 .topnav input[type=button] {
     float: right;
     padding: 6px;
     border: none;
-    margin-top: 8px;
+    margin-top: -3.5%;
     margin-right: 16px;
     font-size: 17px;
 	margin-bottom:1%
