ami kisu pari na -_-chup thak beydop

--- a/Views/login.html
+++ b/Views/login.html
@@ -35,8 +35,8 @@
   </div>
 
   <div class="container" style="background-color:#f1f1f1">
-    <button type="button" class="cancelbtn" id="cnclbtn">Cancel</button>
-    <span class="psw">Forgot <a href="#">password?</a></span>
+     <a href="/login"><button type="button" class="cancelbtn" id="cnclbtn">Cancel</button></a>
+    <span class="psw">Forgot <a href="/pwreset">password?</a></span>
   </div>
 </div>
 </div>
