--- a/Views/table.html
+++ b/Views/table.html
@@ -25,10 +25,13 @@
 <body>
 
 <div class="topnav">
-<h1>Osmani Hall Student Database</h1>
 
-    <input type="button" class="btn btn-info" value="Add Student" id="add">
+
 	
+	<h1>Osmani Hall Student Database</h1>
+	<a href="/"> <input type="button"  class="btn btn-info" value="Home" id="home"></a>
+   <a href="/application"> <input type="button"  class="btn btn-info" value="Add Student" id="add"></a>
+  
 
    
 </div>
@@ -45,6 +48,7 @@
 					<th>Level</th>
 					<th>Student ID</th>
 					<th>Room No</th>
+					<th>Hall</th>
 					<th>Gender</th>
 					<th>Contact No</th>
 						<th>Other</th>
