--- a/Views/Styles/first page.css
+++ b/Views/Styles/first page.css
@@ -39,17 +39,28 @@ body{
 
 }
 
-
+.topnav h1{
+    margin-left:15%;margin-right: 1%  ;margin-top: -3%; margin-bottom:-3% ;color:white ; 
+}
 
 /* When the screen is less than 600px wide, stack the links  vertically instead of horizontally */
-@media screen and (max-width: 600px) {
-    .topnav a, .topnav pic,.topnav hdr {
-        float: none;
-        display: block;
+@media screen and (max-width: 800px) {
+    .topnav a,.topnav h1,.topnav img {
+        
         text-align: left;
-        width: 100%;
-        margin: 0;
+        
         padding: 14px;
     }
+    .topnav img{
+        
+        width: 18%;
+        height: 18%;
+    }
+    .topnav a ,.topnav img,.topnav h1{
+        float:none;
+        display: block;
+    }
+   
+
    
 }
