--- a/Views/Styles/guestTable.css
+++ b/Views/Styles/guestTable.css
@@ -37,10 +37,6 @@ body{
 		font-size:20px;
 
 	}
-	h1{
-	font-size:30px;
-	text-align:center;
-	}
 	
 	.topnav {
     background-color: #00004d;
@@ -85,15 +81,20 @@ body{
 }
 
 @media screen and (max-width: 600px) {
+
+
     .topnav a, .topnav input[type=text] {
         float: none;
         display: block;
         text-align: left;
-        width: 100%;
+        
         margin: 0;
         padding: 14px;
     }
+    
     .topnav input[type=text] {
         border: 1px solid #ccc;
+        margin-bottom: 2%;
+        margin-left: 2%;
     }
 }
