--- a/Views/Styles/table.css
+++ b/Views/Styles/table.css
@@ -30,8 +30,10 @@
 
 	.topnav h1{
 		margin-top:20px;
-	font-size:30px;
-	text-align:center;
+	font-size:20px;
+	float:left;
+	margin-left: 7%;
+	text-align:left;
 	color:white;
 	}
 .topnav {
@@ -41,11 +43,25 @@
 
 
 .topnav input[type=button] {
+
     float: right;
     padding: 6px;
     border: none;
-    margin-top: -3.5%;
-    margin-right: 16px;
+    margin-top: 1%;
+    margin-right: 1%;
     font-size: 17px;
 	margin-bottom:1%
+}
+@media screen and (max-width: 600px) {
+    .topnav h1, .topnav input[type=button] {
+        float: none;
+        
+        text-align: left;
+        width: 90%;
+        margin: 0;
+        padding: 14px;
+        margin-left: 5%;
+        margin-bottom: 1%;
+    }
+    
 }
