--- a/Views/application.html
+++ b/Views/application.html
@@ -43,7 +43,7 @@
 
 <div id="mainContainer" style="margin-left: 30%; margin-top: 100px; " >
     <div class="logoContainer" style=" width: 500px">
-        <img src="logo.png" alt="" class="float-left" style="margin-top: 4px" height="100" width="100">
+        <img src="logo.png" alt="" class="float-left" style="margin-top: 4px;height:100% ;width:20%" >
         <img src="pp.jpg" alt="" class="float-right" style="margin-right: -90px; margin-top: 15px" height="100" width="100">
     </div>
 
@@ -57,49 +57,49 @@
 
             <div class="form-group row" >
 
-                <div class="col-sm-10" style="margin-left:5%">
+                <div class="w" style="margin-left:5%;margin-right:-10%; width:115%">
                     <input type="text" placeholder="Student's Name" class="form-control" name="stdname" required>
                 </div>
             </div>
 
             <div class="form-group row">
 
-                <div class="col-sm-10" style="margin-left:5%">
+                <div class="w" style="margin-left:5%;margin-right:-10%; width:115%">
                     <input type="number" placeholder="Student's Phone number" class="form-control" name="stdphn" required>
                 </div>
             </div>
 
             <div class="form-group row">
 
-                <div class="col-sm-10" style="margin-left:5%">
+                <div class="w" style="margin-left:5%;margin-right:-10%; width:115%">
                     <input type="text" placeholder="Father's Name" class="form-control" name="fatname" required>
                 </div>
             </div>
 
             <div class="form-group row">
 
-                <div class="col-sm-10" style="margin-left:5%">
+                <div class="w" style="margin-left:5%;margin-right:-10%; width:115%">
                     <input type="email" placeholder="Father's Email" class="form-control"  name="fatmail">
                 </div>
             </div>
 
             <div class="form-group row">
 
-                <div class="col-sm-10" style="margin-left:5%">
+                <div class="w" style="margin-left:5%;margin-right:-10%; width:115%">
                     <input type="number" placeholder="Father's Phone number" class="form-control" name="fatphn" required>
                 </div>
             </div>
 
             <div class="form-group row">
 
-                <div class="col-sm-10" style="margin-left:5%">
+                <div class="w" style="margin-left:5%;margin-right:-10%; width:115%">
                     <input type="text" placeholder="Mother's Name" class="form-control" name="motname" required>
                 </div>
             </div>
 
             <div class="form-group row">
 
-                <div class="col-sm-10" style="margin-left:5%">
+                <div class="w" style="margin-left:5%;margin-right:-10%; width:115%">
                     <input type="email" placeholder="Mother's Email" class="form-control"  name="motmail">
                 </div>
             </div>
@@ -107,7 +107,7 @@
 
             <div class="form-group row">
 
-                <div class="col-sm-10" style="margin-left:5%">
+                <div class="w" style="margin-left:5%;margin-right:-10%; width:115%">
                     <input type="number" placeholder="Mother's Phone number" class="form-control" name="motphn" required>
                 </div>
             </div>
@@ -117,49 +117,49 @@
 
             <div class="form-group row">
 
-                <div class="addr" style=" margin-left:10%; margin-right:-10%; width:115%">
+                <div class="addr" style=" margin-left:5%; margin-right:-10%; width:115%">
                     <input type="text" placeholder="Present Address" class="form-control" name="prsntaddr" required>
                 </div>
             </div>
 
             <div class="form-group row">
 
-                <div class="addr" style=" margin-left:10%;margin-right:-10%; width:100%">
+                <div class="addr" style=" margin-left:5%;margin-right:-10%; width:115%">
                     <input type="text" placeholder="Permanent Address" class="form-control" name="pmntaddr" required>
                 </div>
             </div>
 
             <div class="form-group row">
 
-                <div class="col-sm-10" style="margin-left:5%">
+                <div class="w" style="margin-left:5%;margin-right:-10%; width:115%">
                     <input type="text" placeholder="Course Name" class="form-control" name="crse" required>
                 </div>
             </div>
 
             <div class="form-group row">
 
-                <div class="col-sm-10" style="margin-left:5%">
+                <div class="w" style="margin-left:5%;margin-right:-10%; width:115%">
                     <input type="number" placeholder="Student ID" class="form-control" name="stdid" required>
                 </div>
             </div>
 
             <div class="form-group row">
 
-                <div class="col-sm-10" style="margin-left:5%">
+                <div class="w" style="margin-left:5%;margin-right:-10%; width:115%">
                     <input type="number" placeholder="Registration Number" class="form-control" name="regno" required>
                 </div>
             </div>
 
             <div class="form-group row">
 
-                <div class="col-sm-10"style="margin-left:5%">
+                <div class="w" style="margin-left:5%;margin-right:-10%; width:115%">
                     <input type="number" placeholder="Academic Year" class="form-control" name="acyear" required>
                 </div>
             </div>
 			
 			<div class="form-group row">
 
-                <div class="col-sm-10" style="margin-left:5%">
+               <div class="w" style="margin-left:5%;margin-right:-10%; width:115%">
                     <input type="number" placeholder="Level" class="form-control" name="level" required>
                 </div>
             </div>
@@ -198,7 +198,7 @@
 		</select>
 		<div class="form-group row">
 
-                <div class="col-sm-10" style="margin-left:5%">
+                <div class="w" style="margin-left:5%;margin-right:-10%; width:115%">
                     <input type="text" placeholder="Room number" class="form-control" name="room" required>
                 </div>
             </div>
@@ -207,32 +207,32 @@
             <h6 style="font-size: 15px; margin-left: -40px;  margin-top:25px">2.Local Guardian's Information</h6>
             <div class="form-group row">
 
-                <div class="col-sm-10" style="margin-left:5%">
+                <div class="w" style="margin-left:5%;margin-right:-10%; width:115%">
                     <input type="text" placeholder="Local Guardian's Name" class="form-control"  name="gdname" required>
                 </div>
             </div>
             <div class="form-group row">
 
-                <div class="col-sm-10" style="margin-left:5%">
+                <div class="w" style="margin-left:5%;margin-right:-10%; width:115%">
                     <input type="email" placeholder="Local Guardian's Email" class="form-control"  name="gdmail" required>
                 </div>
             </div>
             <div class="form-group row">
 
-                <div class="col-sm-10" style="margin-left:5%">
+                <div class="w" style="margin-left:5%;margin-right:-10%; width:115%">
                     <input type="number" placeholder="Local Guardian's Phone number" class="form-control"  name="gdphn" required>
                 </div>
             </div>
             <div class="form-group row">
 
-                <div class="col-sm-10" style="margin-left:5%">
+                <div class="w" style="margin-left:5%;margin-right:-10%; width:115%">
                     <input type="text" placeholder="Local Guardian's Address" class="form-control"  name="gdaddr" required>
                 </div>
             </div>
             <div class="form-group row">
 
-                <div class="col-sm-10" style="margin-left:10%">
-                    <input type="submit"  class="btn btn-success" style="width: 220px;">
+                <div class="w" style="margin-left:25%; width:115%">
+                    <input type="submit"  class="btn btn-success" name="SUBMIT" style="width: 220px;">
                 </div>
             </div>
 
