--- a/Views/first page.html
+++ b/Views/first page.html
@@ -13,11 +13,12 @@
 <body>
 
 	<div class="topnav">
-	<img src="logo.png" class= "pic" alt="" class="float-left" style="margin-top: 1% ; margin-left:5%" height="60" width="63">
-		<h1 class="hdr" class="float-left" style="margin-left:20%  ;margin-top: -4%; margin-bottom:-3% ;color:white">Osmani Hall Entry Management System</h1>
+	<img src="logo.png" class= "pic" alt=""  style="margin-top: 1% ; margin-left:5%; " height="60" width="63" >
+		<h1 class="hdr" class="float-left" style="font-size: 100%">Osmani Hall In-Out Management System</h1>
 
  <a class="active" href="/residentstudent" id="entry">Entry List</a>
   <a href="/login" id="login">Log In</a>
+  <a href="/login" id="gst">Guest Form</a>
   <a href="/contact" id="cntct">Contact</a>
   
   </a>
