--- a/Views/guestTable.html
+++ b/Views/guestTable.html
@@ -35,6 +35,7 @@
 					<th>Level</th>
 					<th>Resident student ID</th>
 					<th>Room No</th>
+					<th>Hall</th>
 					<th>Gender</th>
 					<th>Contact No</th>
 					<th>Exit Time</th>
