--- a/Views/mergeTable.html
+++ b/Views/mergeTable.html
@@ -8,7 +8,7 @@
 <style>
 	body{
 		font-family: Arial;
-		font-size: 20px;
+		
 		background-image: url(back2.jpg);
 		background-size: cover;
 		background-attachment:fixed;
@@ -45,6 +45,7 @@
 					<th>Level</th>
 					<th>Student ID</th>
 					<th>Room No</th>
+					<th>Hall</th>
 					<th>Gender</th>
 					<th>Contact No</th>
 					<th>Exit Time</th>
