--- a/Views/Styles/table.css
+++ b/Views/Styles/table.css
@@ -42,6 +42,13 @@
 }
 
 
+.topnav a{
+	float:right;
+	margin-top: 1%;
+	margin-bottom: 1%;
+	margin-right: 1%;
+}
+
 .topnav input[type=button] {
 
     float: right;
@@ -53,15 +60,16 @@
 	margin-bottom:1%
 }
 @media screen and (max-width: 600px) {
-    .topnav h1, .topnav input[type=button] {
+    .topnav h1, .topnav input[type=button]{
         float: none;
-        
+        display:block;
         text-align: left;
         width: 90%;
         margin: 0;
-        padding: 14px;
         margin-left: 5%;
         margin-bottom: 1%;
+        
+        
     }
     
 }
