--- a/Views/table.html
+++ b/Views/table.html
@@ -20,6 +20,10 @@
 
  <link rel="stylesheet" href="/Styles/bootstrap.min.css">
  <script src="/Script/table.js"></script>
+ <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 </head>
 <body>
@@ -29,8 +33,15 @@
 
 	
 	<h1>Osmani Hall Student Database</h1>
-	<a href="/"> <input type="button"  class="btn btn-info" value="Home" id="home"></a>
-   <a href="/application"> <input type="button"  class="btn btn-info" value="Add Student" id="add"></a>
+	<a href="#" class="btn btn-info " style="margin-top: 1.1%" id="logout"> Log out
+          <span class="glyphicon glyphicon-off"></span>
+        </a>
+	
+
+
+	<a href="/"> <input type="button"  class="btn btn-info btn-m" value="Home" id="home"></a>
+   <a href="/application"> <input type="button"  class="btn btn-info btn-m" value="Add Student" id="add"></a>
+   
   
 
    
