mere felbo toke ekdin

--- a/Views/mergeTable.html
+++ b/Views/mergeTable.html
@@ -20,6 +20,10 @@
  <link rel="stylesheet" href="/Styles/bootstrap.min.css">
     <script src="/Script/bootstrap.min.js"></script>
 	<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
 
 </head>
 <body>
@@ -28,10 +32,16 @@
 
   <h1>Resident Student In-Out Register</h1>
    <a class="active" href="/" id="home">Home</a>
-  <a href="/guest" id="gst">Guest Student In-Out Register</a>
+
+  <a  href="/guest" id="gst">Guest Student In-Out Register</a>
+  
   
     <input type="text" placeholder="Search.." id="srch">
-   
+    <p>
+    <a href="#" class="btn btn-info " class="lgbtn" class="float-right" style="margin-bottom: 1% ; width: 100%;background: #00b3b3;" id="logout"> Log out
+          <span class="glyphicon glyphicon-off"></span>
+        </a>
+   </p>
 </div>
 
 <div id="tableContainer" style="margin-left: 2%; margin-top: 75px; " >
