--- a/Views/table.html
+++ b/Views/table.html
@@ -33,14 +33,14 @@
 
 	
 	<h1>Osmani Hall Student Database</h1>
-	<a href="#" class="btn btn-info " style="margin-top: 1.1%" id="logout"> Log out
+	<a href="#"  class="lgbtn" style="  color:white" id="logout" > Log out
           <span class="glyphicon glyphicon-off"></span>
         </a>
 	
 
 
-	<a href="/"> <input type="button"  class="btn btn-info btn-m" value="Home" id="home"></a>
-   <a href="/application"> <input type="button"  class="btn btn-info btn-m" value="Add Student" id="add"></a>
+	<a href="/"  value="Home"  id="home" style="color:white">Home</a>
+   <a href="/application" value="Add Student" id="add" style="color:white">Add Student</a>
    
   
 
