--- a/Views/Styles/mergeTable.css
+++ b/Views/Styles/mergeTable.css
@@ -71,25 +71,42 @@
 .topnav a.active {
     background-color: #00b3b3;
     color: white;
+    width: auto;
+    margin-left: 1%;
 }
 
-.topnav input[type=text] {
+.topnav p{
     float: right;
     padding: 6px;
     border: none;
+    margin-top: -.5%;
+    margin-right: 1%;
+    font-size: 17px;
+
+}
+.topnav input[type=text] {
+	float:left;
+	padding: 6px;
+    border: none;
     margin-top: 8px;
     margin-right: 16px;
+    margin-left: 1%;
     font-size: 17px;
 }
 
+
 @media screen and (max-width: 600px) {
-    .topnav a, .topnav input[type=text] {
+    .topnav a,.topnav p, .topnav input[type=text] {
         float: none;
         display: block;
         text-align: left;
         width: 100%;
         margin: 0;
         padding: 14px;
+    }
+    .topnav p{
+    	width: 110%;
+    	margin-left: -1.5%;
     }
     .topnav input[type=text] {
         border: 1px solid #ccc;
