--- a/Views/Styles/table.css
+++ b/Views/Styles/table.css
@@ -29,7 +29,7 @@
 	}
 
 	.topnav h1{
-		margin-top:20px;
+		margin-top:30px;
 	font-size:20px;
 	float:left;
 	margin-left: 7%;
@@ -42,34 +42,31 @@
 }
 
 
-.topnav a{
+.topnav a, .topnav a.lgbtn{
 	float:right;
-	margin-top: 1%;
+	margin-top: 20px;
 	margin-bottom: 1%;
 	margin-right: 1%;
+	padding: 14px 16px;
+	    font-size: 17px;
+
 }
 
-.topnav input[type=button] {
-
-    float: right;
-    padding: 6px;
-    border: none;
-    margin-top: 1%;
-    margin-right: 1%;
-    font-size: 17px;
-	margin-bottom:1%
+.topnav a:hover {
+    background-color: #00b3b3;
+    color: black;
+	margin-top:1%
 }
-@media screen and (max-width: 600px) {
-    .topnav h1, .topnav input[type=button]{
-        float: none;
-        display:block;
-        text-align: left;
-        width: 90%;
-        margin: 0;
-        margin-left: 5%;
-        margin-bottom: 1%;
-        
-        
+
+@media screen and (max-width: 800px) {
+    .topnav a,.topnav h1 ,.topnav a.lgbtn{
+        float:none;
+        display: block;
+        text-align: left; 
+        padding: 10px;
     }
     
+   
+
+   
 }
