--- a/Views/mergeTable.html
+++ b/Views/mergeTable.html
@@ -38,7 +38,8 @@
   
     <input type="text" placeholder="Search.." id="srch">
     <p>
-    <a href="#" class="btn btn-info " class="lgbtn" class="float-right" style="margin-bottom: 1% ; width: 100%;background: #00b3b3;" id="logout"> Log out
+    
+        <a href="#"  class="lgbtn" class="float-right" style=" margin-bottom: 1% ; width: 100%;" id="logout" > Log out
           <span class="glyphicon glyphicon-off"></span>
         </a>
    </p>
