--- a/Views/application.html
+++ b/Views/application.html
@@ -45,6 +45,10 @@
     <div class="logoContainer" style=" width: 500px">
         <img src="logo.png" alt="" class="float-left" style="margin-top: 4px;height:100% ;width:20%" >
         <img src="pp.jpg" alt="" class="float-right" style="margin-right: -90px; margin-top: 15px" height="100" width="100">
+        <div class="float-right" > 
+                
+                <input id="image" style="margin-right: -500px;width:50% ; margin-top: 85px ;border:transparent; color:transparent;background: transparent;"  type="file" name="profile_photo" placeholder="Photo" required="" capture>
+            </div>
     </div>
 
     <div style="width: 600px; border: 3px solid forestgreen; ">
