--- a/Views/first page.html
+++ b/Views/first page.html
@@ -16,7 +16,7 @@
 	<img src="logo.png" class= "pic" alt=""  style="margin-top: 1% ; margin-left:5%; " height="60" width="63" >
 		<h1 class="hdr" class="float-left" style="font-size: 100%">Osmani Hall In-Out Management System</h1>
 
- <a class="active" href="/residentstudent" id="entry">Entry List</a>
+ <a  href="/residentstudent" id="entry">Entry List</a>
   <a href="/login" id="login">Log In</a>
   <a href="/login" id="gst">Guest Form</a>
   <a href="/contact" id="cntct">Contact</a>
