--- a/Views/application.html
+++ b/Views/application.html
@@ -53,7 +53,7 @@
         	
         	<div class="float-right" > 
                 
-                <input id="image" style="margin-left: 43.5px;width:50% ; margin-top: -65px ;border:transparent; color:transparent;background: transparent;"  type="file" name="profile_photo" placeholder="Photo" required="" capture>
+                <input id="image" style="margin-left: 43.5px;width:50% ; margin-top: -65px ;border:transparent; color:transparent;background: transparent;"  type="file" name="profile_photo" placeholder="Photo"  capture>
             </div>
        		
 
@@ -65,7 +65,7 @@
             <div class="form-group row" >
 
                 <div class="w" style="margin-left:5%;margin-right:-10%; width:115%">
-                    <input type="text" placeholder="Student's Name" class="form-control" name="stdname" required>
+                    <input type="text" placeholder="Student's Name" class="form-control" name="stdname" required requiredmessage="Name is required.">
                 </div>
             </div>
 
