--- a/Views/login.html
+++ b/Views/login.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <link rel="stylesheet" href="/Styles/bootstrap.min.css">
   <script src="Script/login.js"></script>
   <link rel="stylesheet" href="Styles/login.css">
