--- a/Views/passwordreset.html
+++ b/Views/passwordreset.html
@@ -5,6 +5,7 @@
   <script src="Script/passwordreset.js"></script>
   <link rel="stylesheet" href="Styles/passwordreset.css">
 	<script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 
@@ -28,7 +29,7 @@
     <input type="email"   placeholder="Email ID" name="uname" onkeydown="checkforenter(this)" id="usrname" required >
 
 
-    <button  id="reset"  onclick="reset()">Confirm</button>  
+    <button  id="reset"  onclick="reset()"><span class="" id="spin"></span> Confirm</button>  
   </div>
 
             <h2 style="font-size: 100% ;  margin-left: 35% ; margin-bottom: 5%; margin-top: 1%">Back to <a href="/login">Login</a></h2>
